Add test case for W [w5KHTC]

--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 Refactor codebase with Z [DDVEK0] line 3.1
 Refactor codebase with Z [DDVEK0] line 3.2
 Update documentation [YrH8R4] line 5.1
+Add test case for W [w5KHTC] line 6.2
