Add test case for W [FUsrn0]

--- a/config.json
+++ b/config.json
@@ -5,3 +5,4 @@ Add test case for W [w5KHTC] line 6.2
 Fix issue in Y [hLtj65] line 8.2
 Improve performance [4LLdxw] line 9.1
 Fix issue in Y [oP4NHy] line 10.1
+Add test case for W [FUsrn0] line 11.1
