--- a/config.json
+++ b/config.json
@@ -4,3 +4,4 @@ Update documentation [YrH8R4] line 5.1
 Add test case for W [w5KHTC] line 6.2
 Fix issue in Y [hLtj65] line 8.2
 Improve performance [4LLdxw] line 9.1
+Fix issue in Y [oP4NHy] line 10.1
